Исправлены замечания ревьюера.